# pnp-rs

./: CHANGELOG.md  Cargo.toml  README.md  testExpectations.json
.github/workflows/: bench.yml  ci.yml  release-plz.yml
benches/: vpath_bench.rs
data/: edge_case_manifest_state.json  pnp-yarn-v3.cjs  pnp-yarn-v4-registry-data-order.cjs  pnp-yarn-v4.cjs  test-expectations.json
fixtures/global-cache/: .gitignore  .yarnrc.yml  package.json  test.js
src/: builtins.rs  error.rs  fs.rs  lib.rs  lib_tests.rs  main.rs  manifest.rs  pnp_fs.rs  util.rs  zip.rs
