[package]
name = "pnp"
version = "0.12.4"
edition = "2021"
license = "BSD-2-Clause"
description = "Resolution primitives for Yarn PnP"
homepage = "https://yarnpkg.com"
repository = "https://github.com/yarnpkg/pnp-rs"

[dependencies]
byteorder = "1"
concurrent_lru = "^0.2"
fancy-regex = { version = "^0.16.0", default-features = false, features = ["std"] }
miniz_oxide = "^0.8"
mmap-rs = { version = "^0.6", optional = true }
pathdiff = "^0.2"
radix_trie = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rustc-hash = "2"
dirs = "6.0.0"

[dev-dependencies]
rstest = "0.26.0"
criterion = "0.7"

[lib]
bench = false

[[bin]]
name = "pnp"
path = "src/main.rs"
bench = false

[[bench]]
name = "vpath_bench"
harness = false

[features]
mmap = ["dep:mmap-rs"]
