[package]
name = "pnp"
version = "0.12.8"
edition = "2021"
license = "BSD-2-Clause"
description = "Resolution primitives for Yarn PnP"
homepage = "https://yarnpkg.com"
repository = "https://github.com/yarnpkg/pnp-rs"

[dependencies]
byteorder = "1"
concurrent_lru = "^0.2"
fancy-regex = { version = "^0.17.0", default-features = false, features = ["std"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
mmap-rs = { version = "^0.7.0", optional = true }
nodejs-built-in-modules = "1.0.0"
pathdiff = "^0.2"
radix_trie = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rustc-hash = "2"
indexmap = "2.12.1"

[dev-dependencies]
dirs-next = "2.0.0"
rstest = "0.26.1"
criterion = "0.8"

[lib]
bench = false

[[bin]]
name = "pnp"
path = "src/main.rs"
bench = false

[[bench]]
name = "vpath_bench"
harness = false

[features]
mmap = ["dep:mmap-rs"]
